[gd_scene load_steps=7 format=3 uid="uid://cs7kbcpk02p7s"]

[ext_resource type="Script" path="res://assets/scenes/pause_menu/game_over_menu.gd" id="1_veoiv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e338e"]

[sub_resource type="LabelSettings" id="LabelSettings_jmn7i"]
font_size = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_defth"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 0.156863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmflh"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.317647, 0.317647, 0.317647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mcji2"]

[node name="GameOverMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -240.0
offset_right = 173.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_veoiv")
metadata/_edit_horizontal_guides_ = [341.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -340.0
offset_top = -256.0
offset_right = -340.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.68, 2.72)
color = Color(0, 0, 0, 0.752941)

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 62.0
offset_top = -162.0
offset_right = 334.0
offset_bottom = -93.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_e338e")
text = "Game Over"
label_settings = SubResource("LabelSettings_jmn7i")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
layout_mode = 2
offset_left = 57.5
offset_top = 306.5
offset_right = 329.5
offset_bottom = 361.5
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_defth")
theme_override_styles/hover = SubResource("StyleBoxFlat_dmflh")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 2
offset_left = 62.0
offset_top = 390.0
offset_right = 334.0
offset_bottom = 445.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_defth")
theme_override_styles/hover = SubResource("StyleBoxFlat_dmflh")
text = "Main Menu
"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 473.0
offset_right = 332.0
offset_bottom = 528.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_defth")
theme_override_styles/hover = SubResource("StyleBoxFlat_dmflh")
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -339.5
offset_top = -263.5
offset_right = -67.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_e338e")
text = "Captured Souls"
label_settings = SubResource("LabelSettings_mcji2")
horizontal_alignment = 1

[node name="Score" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_e338e")
text = "0"
label_settings = SubResource("LabelSettings_jmn7i")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.5
offset_top = -184.5
offset_right = 315.5
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="ScoreLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_e338e")
text = "Days Survived
"
label_settings = SubResource("LabelSettings_mcji2")
horizontal_alignment = 1

[node name="DaysLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_e338e")
text = "0"
label_settings = SubResource("LabelSettings_jmn7i")
horizontal_alignment = 1

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
